--- a/css/style.css
+++ b/css/style.css
@@ -23,6 +23,8 @@ input:focus {
     clear: both;
 }
 
+/*   HEADER   */
+
 header {
     background: #3665af;
     padding: 8px 0;
@@ -77,6 +79,8 @@ form.form-login {
 .form-element input[type=submit]:hover {
     background: #215ab2;
 }
+
+/*   FORMULARIO   */
 
 section.main {
     background: linear-gradient(white, #e1e2f4);
@@ -161,6 +165,7 @@ section.main {
 .nascimento {
     float: left;
     margin-top: 5px;
+    padding: 5px;
 }
 
 .input-radio {
@@ -177,6 +182,8 @@ section.main {
     display: inline-block;
 }
 
+/*   FOOTER   */
+
 .linguas {
     padding-right: 18px;
     padding: 30px 0;
@@ -184,7 +191,7 @@ section.main {
 }
 
 .linguas a {
-    font-size: 12px;
+    font-size: 14px;
     color: #365899;
     text-decoration: none;
 }
@@ -199,5 +206,48 @@ section.main {
 }
 
 .selected-linguas {
-    color: #737373;
+    color: #737373 !important;
+}
+
+/*   MOBILE   */
+
+@media screen and (max-width: 768px) {
+
+    .logo {
+        float: none;
+        width: 100%;
+        text-align: center;
+    }
+
+    .form-login {
+        margin-top: 17px;
+        display: inline-block;
+        float: none;
+        width: 100%;
+        text-align: center;
+    }
+
+    .form-login,
+    .form-element {
+        display: block;
+        margin: 10px 0;
+    }
+
+    .form-element input[type=email],
+    .form-element input[type=password] {
+        width: 100%;
+        max-width: 300px;
+    }
+
+    .form-element input[type=submit] {
+        width: 100px;
+    }
+
+    .img-pessoas {
+        display: none;
+    }
+
+    .abrir-conta {
+        width: 100%;
+    }
 }
